feat: Implement Tenant Cache for Payment Processor
- Created tenant_cache table for local caching of tenant data synchronized from the Tenant Service.
- Developed Kafka consumer configuration to handle tenant events and update the cache accordingly.
- Implemented TenantCache entity to represent cached tenant data with necessary fields and validation methods.
- Added TenantEventConsumer to listen for tenant-related events and manage cache updates.
- Developed TenantCacheRepository for data access to the tenant cache.
- Created TenantCacheService to manage cache operations and validate tenant payment eligibility.
- Added migration scripts for database schema changes related to tenant cache.
- Enhanced security measures to ensure only eligible tenants can process payments.

--- a/apps/backend/java-services/business-services/analytics-engine/pom.xml
+++ b/apps/backend/java-services/business-services/analytics-engine/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>analytics-engine</artifactId>
     <packaging>jar</packaging>
 
-    <name>Analytics Engine Service</name>
+    <name>Modern Reservation - Analytics Engine</name>
     <description>Analytics and business intelligence microservice for Modern Reservation System</description>
 
     <dependencies>
@@ -65,6 +65,13 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <!-- Tenant Commons -->
+        <dependency>
+            <groupId>com.modernreservation</groupId>
+            <artifactId>tenant-commons</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- API Documentation -->
