--- a/apps/backend/java-services/business-services/payment-processor/pom.xml
+++ b/apps/backend/java-services/business-services/payment-processor/pom.xml
@@ -16,7 +16,7 @@
     <version>3.2.0</version>
     <packaging>jar</packaging>
 
-    <name>Payment Processor Service</name>
+    <name>Modern Reservation - Payment Processor</name>
     <description>Payment processing microservice for Modern Reservation System</description>
 
     <properties>
@@ -111,6 +111,11 @@
 
         <!-- Utilities -->
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
@@ -124,6 +129,13 @@
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
+        </dependency>
+
+        <!-- Internal Dependencies -->
+        <dependency>
+            <groupId>com.modernreservation</groupId>
+            <artifactId>tenant-commons</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- Test Dependencies -->
@@ -188,6 +200,11 @@
                     <source>21</source>
                     <target>21</target>
                     <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
