--- a/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/analytics-engine/src/main/resources/application.yml
@@ -77,13 +77,14 @@ spring:
       linger-ms: 5
       buffer-memory: 33554432
     consumer:
-      group-id: analytics-engine
+      group-id: analytics-engine-tenant-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: earliest
       enable-auto-commit: false
+      max-poll-records: 10
       properties:
-        spring.json.trusted.packages: com.modernreservation.*
+        spring.json.trusted.packages: com.modernreservation.tenant.commons.events
 
 # Eureka Client Configuration
 eureka:
