--- a/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
@@ -76,13 +76,14 @@ spring:
       properties:
         spring.json.add.type.headers: false
     consumer:
-      group-id: payment-processor-group
+      group-id: payment-processor-tenant-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: earliest
       enable-auto-commit: false
       properties:
-        spring.json.trusted.packages: com.modernreservation.paymentprocessor.dto
+        spring.json.trusted.packages: com.modernreservation.paymentprocessor.dto,com.modernreservation.tenant.commons.events
+      max-poll-records: 10
     listener:
       ack-mode: manual_immediate
 
