--- a/apps/backend/java-services/business-services/availability-calculator/pom.xml
+++ b/apps/backend/java-services/business-services/availability-calculator/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>com.modernreservation</groupId>
     <artifactId>availability-calculator</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
     <name>Modern Reservation - Availability Calculator</name>
     <description>Microservice for room availability calculations and pricing</description>
