--- a/.github/workflows/build-java-services.yml
+++ b/.github/workflows/build-java-services.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'apps/backend/java-services/**'
       - 'libs/shared/backend-utils/**'
+      - 'libs/shared/tenant-commons/**'
       - '.github/workflows/build-java-services.yml'
   pull_request:
     branches:
@@ -16,6 +17,7 @@ on:
     paths:
       - 'apps/backend/java-services/**'
       - 'libs/shared/backend-utils/**'
+      - 'libs/shared/tenant-commons/**'
       - '.github/workflows/build-java-services.yml'
   workflow_dispatch:
 
@@ -59,8 +61,9 @@ jobs:
           echo "Parent POM:"
           ls -la apps/backend/java-services/pom.xml
           echo ""
-          echo "Backend Utils:"
+          echo "Shared Libraries:"
           ls -la libs/shared/backend-utils/pom.xml
+          ls -la libs/shared/tenant-commons/pom.xml
           echo ""
           echo "Infrastructure Services:"
           ls -d apps/backend/java-services/infrastructure/*/
@@ -94,6 +97,20 @@ jobs:
           else
             echo "❌ Backend utils build failed!"
             echo "This is critical - all services depend on backend-utils"
+            exit 1
+          fi
+
+      - name: 🏗️ Build Tenant Commons Library
+        working-directory: libs/shared/tenant-commons
+        run: |
+          echo "=================================================="
+          echo "📦 Building Tenant Commons Library"
+          echo "=================================================="
+          if mvn clean install -DskipTests; then
+            echo "✅ Tenant commons built successfully"
+          else
+            echo "❌ Tenant commons build failed!"
+            echo "This is critical - all business services depend on tenant-commons"
             exit 1
           fi
 
@@ -145,6 +162,22 @@ jobs:
               echo "✅ Gateway Service built successfully"
             else
               echo "❌ Gateway Service build failed"
+              FAILED=$((FAILED + 1))
+            fi
+            cd ..
+            echo ""
+          fi
+
+          # Tenant Service
+          if [ -d "tenant-service" ]; then
+            echo "=================================================="
+            echo "📦 Building Tenant Service..."
+            echo "=================================================="
+            cd tenant-service
+            if mvn clean package -DskipTests; then
+              echo "✅ Tenant Service built successfully"
+            else
+              echo "❌ Tenant Service build failed"
               FAILED=$((FAILED + 1))
             fi
             cd ..
@@ -274,7 +307,7 @@ jobs:
 
           # Test Infrastructure Services
           cd infrastructure
-          for service in config-server eureka-server gateway-service; do
+          for service in config-server eureka-server gateway-service tenant-service; do
             if [ -d "$service" ] && [ -f "$service/pom.xml" ]; then
               echo "Testing $service..."
               cd "$service"
@@ -303,7 +336,7 @@ jobs:
           echo "### Infrastructure Services" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          for service in config-server eureka-server gateway-service; do
+          for service in config-server eureka-server gateway-service tenant-service; do
             JAR_COUNT=$(find apps/backend/java-services/infrastructure/$service/target -name "*.jar" -not -name "*-javadoc.jar" -not -name "*-sources.jar" 2>/dev/null | wc -l)
             if [ "$JAR_COUNT" -gt 0 ]; then
               JAR_FILE=$(find apps/backend/java-services/infrastructure/$service/target -name "*.jar" -not -name "*-javadoc.jar" -not -name "*-sources.jar" 2>/dev/null | head -1 | xargs basename)
