--- a/apps/backend/java-services/infrastructure/tenant-service/pom.xml
+++ b/apps/backend/java-services/infrastructure/tenant-service/pom.xml
@@ -7,16 +7,15 @@
 
     <parent>
         <groupId>com.modernreservation</groupId>
-        <artifactId>infrastructure</artifactId>
-        <version>1.0.0</version>
-        <relativePath>../pom.xml</relativePath>
+        <artifactId>java-services-parent</artifactId>
+        <version>2.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>tenant-service</artifactId>
-    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Tenant Service</name>
+    <name>Modern Reservation - Tenant Service</name>
     <description>Master tenant management service - owns all tenant data and publishes events</description>
 
     <properties>
