--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "k8s:deploy": "kubectl apply -f infrastructure/k8s/",
     "dev:frontend": "nx serve",
     "dev:backend-node": "nx run-many --target=serve --projects=api-gateway,websocket-service,notification-service",
-    "dev:backend-java": "mvn spring-boot:run -f apps/java-services/"
+    "dev:backend-java": "mvn spring-boot:run -f apps/java-services/",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "lint:biome": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "private": true,
   "dependencies": {
@@ -73,7 +79,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.0",
     "cypress": "^13.5.0",
-    "ts-node": "^10.9.0"
+    "ts-node": "^10.9.0",
+    "@biomejs/biome": "^1.9.4"
   },
   "nx": {
     "includedScripts": []
