Add comprehensive VS Code configuration and GitHub Copilot instructions for Modern Reservation project
- Created README.md in .github/instructions/ for Copilot guidance
- Added VS Code configuration in .vscode/ with settings, extensions, and tasks
- Defined toolsets in .github/copilot-toolsets.json for project-specific commands
- Established Biome.js configuration for shared libraries in libs/shared/
- Documented setup and usage instructions in docs/COPILOT_TOOLSETS_SETUP.md and docs/VSCODE_CONFIGURATION_COMPLETE.md
- Implemented consistent formatting and linting rules across shared libraries

--- a/libs/shared/ui-components/biome.json
+++ b/libs/shared/ui-components/biome.json
@@ -24,6 +24,9 @@
       "style": {
         "noNegationElse": "off",
         "useConst": "error"
+      },
+      "suspicious": {
+        "noUnknownAtRules": "off"
       }
     }
   },
