--- a/libs/shared/ui-components/tsconfig.json
+++ b/libs/shared/ui-components/tsconfig.json
@@ -25,13 +25,6 @@
       "@/types/*": ["./src/types/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.*",
-    "**/*.spec.*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*"]
 }
