--- a/apps/backend/node-services/notification-service/biome.json
+++ b/apps/backend/node-services/notification-service/biome.json
@@ -1,14 +1,12 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
   "vcs": {
-    "enabled": true,
+    "enabled": false,
     "clientKind": "git",
-    "useIgnoreFile": true
+    "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": true,
-    "includes": ["src/**/*", "lib/**/*", "utils/**/*", "types/**/*", "**/*.ts", "**/*.js"],
-    "ignore": ["node_modules/**", "dist/**", "build/**", "coverage/**", ".turbo/**", "*.d.ts"]
+    "ignoreUnknown": true
   },
   "formatter": {
     "enabled": true,
@@ -28,18 +26,19 @@
         "useConst": "error"
       },
       "suspicious": {
-        "noConsoleLog": "warn"
+        "noConsole": "warn"
       }
     }
   },
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
-      "trailingComma": "es5",
+      "trailingCommas": "es5",
       "semicolons": "always"
     }
   },
   "assist": {
+    "enabled": true,
     "actions": {
       "source": {
         "organizeImports": "on"
