--- a/libs/shared/graphql-client/package.json
+++ b/libs/shared/graphql-client/package.json
@@ -15,7 +15,13 @@
   },
   "scripts": {
     "build": "tsc",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "keywords": [
     "graphql",
@@ -33,6 +39,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.5",
     "@types/node": "^20.0.0",
     "@types/react": "^19",
     "typescript": "^5.7.3"
