--- a/libs/shared/schemas/package.json
+++ b/libs/shared/schemas/package.json
@@ -11,19 +11,25 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "validate-schemas": "node dist/validation/validate-all.js"
+    "lint": "biome lint .",
+    "validate-schemas": "node dist/validation/validate-all.js",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "lint:fix": "biome lint --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "dependencies": {
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "typescript": "^5.2.0",
-    "jest": "^29.7.0",
+    "@biomejs/biome": "^2.2.5",
     "@types/jest": "^29.5.0",
-    "eslint": "^8.53.0"
+    "@types/node": "^20.8.0",
+    "eslint": "^8.53.0",
+    "jest": "^29.7.0",
+    "typescript": "^5.2.0"
   },
   "keywords": [
     "zod",
