--- a/.github/copilot-tool.toolsets.jsonc
+++ b/.github/copilot-tool.toolsets.jsonc
@@ -9,6 +9,7 @@
       "tools": [
         "ripgrep",
         "fd-find",
+        "gh-cli",
         "biome",
         "dev.sh",
         "docker",
@@ -27,7 +28,8 @@
         "Always import from shared packages: @modern-reservation/schemas, @modern-reservation/graphql-client",
         "Never create local schema definitions, use @modern-reservation/schemas",
         "Never create separate Apollo clients, use @modern-reservation/graphql-client",
-        "Code style: single quotes, 2-space indent, 100 char line width, always semicolons"
+        "Code style: single quotes, 2-space indent, 100 char line width, always semicolons",
+        "Use gh CLI for GitHub operations: gh pr create, gh issue list, gh run list"
       ]
     },
     "search-tools": {
@@ -168,16 +170,18 @@
     "linux-commands": {
       "description": "Preferred Linux commands and tools",
       "icon": "terminal",
-      "tools": ["ripgrep", "fd-find", "bat", "tree", "curl", "jq"],
+      "tools": ["ripgrep", "fd-find", "bat", "gh", "tree", "curl", "jq"],
       "instructions": [
         "Use 'rg' instead of 'grep' for searching file contents",
         "Use 'fd' instead of 'find' for finding files",
         "Use 'bat' instead of 'cat' for syntax highlighting",
+        "Use 'gh' for GitHub operations instead of web UI",
         "Use 'exa' or 'ls -lah' for directory listing",
         "Use 'tree' for directory structure",
         "Use 'curl' instead of 'wget' for downloads",
         "Use 'jq' for JSON parsing",
-        "Installation: sudo apt install ripgrep fd-find bat tree curl jq",
+        "Installation: sudo apt install ripgrep fd-find bat gh tree curl jq",
+        "Or use install script: ./install-prerequisites.sh",
         "If command not found, suggest: sudo apt install <package>"
       ]
     },
@@ -193,6 +197,58 @@
         "Aim for >80% code coverage",
         "Mock external dependencies",
         "Test edge cases and error conditions"
+      ]
+    },
+    "github-cli": {
+      "description": "GitHub CLI operations for Modern Reservation project",
+      "icon": "github",
+      "tools": ["gh"],
+      "instructions": [
+        "Installation: sudo apt install gh",
+        "Authenticate: gh auth login",
+        "",
+        "Pull Requests:",
+        "  gh pr list                                    # List PRs",
+        "  gh pr create --title 'feat: Title' --body 'Description'  # Create PR",
+        "  gh pr view 123                               # View PR details",
+        "  gh pr checks                                 # Check CI status",
+        "  gh pr diff                                   # View PR diff",
+        "  gh pr review 123 --approve                   # Approve PR",
+        "  gh pr merge 123 --squash                     # Squash merge (always use)",
+        "",
+        "Issues:",
+        "  gh issue list                                # List issues",
+        "  gh issue create --title 'Bug: Title' --body 'Description'  # Create issue",
+        "  gh issue view 123                            # View issue",
+        "  gh issue close 123                           # Close issue",
+        "",
+        "Workflows (CI/CD):",
+        "  gh run list                                  # List workflow runs",
+        "  gh run list --workflow=build-java-services.yml  # Filter by workflow",
+        "  gh run view <run-id>                         # View run details",
+        "  gh run rerun <run-id>                        # Rerun workflow",
+        "  gh workflow list                             # List all workflows",
+        "",
+        "Repository:",
+        "  gh repo view                                 # View repo info",
+        "  gh browse                                    # Open repo in browser",
+        "",
+        "Releases:",
+        "  gh release list                              # List releases",
+        "  gh release create v1.0.0 --notes 'Notes'    # Create release",
+        "",
+        "Best Practices:",
+        "  - Use gh CLI instead of web UI for faster operations",
+        "  - Always check PR status before merging: gh pr checks",
+        "  - Always use --squash when merging to keep history clean",
+        "  - Follow conventional commit format in PR titles (feat:, fix:, docs:, etc.)",
+        "  - Link PRs to issues in description: 'Fixes #123'",
+        "",
+        "Integration with dev.sh:",
+        "  ./dev.sh gh-status     # Check GitHub status",
+        "  ./dev.sh gh-pr         # Create PR",
+        "  ./dev.sh gh-checks     # Check CI/CD status",
+        "  ./dev.sh gh-view 123   # View PR details"
       ]
     }
   }
