feat: Integrate OpenTelemetry for observability and tracing across services
- Added OpenTelemetry dependencies to pom.xml files for reservation-engine, config-server, eureka-server, gateway-service, and tenant-service.
- Updated application.yml files to configure OpenTelemetry settings, including service name, resource attributes, and exporters for traces, metrics, and logs.
- Removed Zipkin configurations and dependencies in favor of OpenTelemetry.
- Updated dev.sh to reflect changes in observability tools, replacing Zipkin with Jaeger and adding Prometheus and Grafana.
- Consolidated Docker Compose files into a single docker-compose.yml for infrastructure services, including PostgreSQL, Redis, Kafka, and observability tools.
- Enhanced health check scripts to include checks for Kafka and Schema Registry.

--- a/apps/backend/java-services/business-services/analytics-engine/pom.xml
+++ b/apps/backend/java-services/business-services/analytics-engine/pom.xml
@@ -70,8 +70,8 @@
         <!-- Tenant Commons -->
         <dependency>
             <groupId>com.modernreservation</groupId>
-            <artifactId>tenant-commons</artifactId>
-            <version>1.0.0</version>
+<artifactId>tenant-commons</artifactId>
+<version>1.0.0</version>
         </dependency>
 
         <!-- API Documentation -->
@@ -104,14 +104,18 @@
             <version>4.4</version>
         </dependency>
 
-        <!-- Observability & Tracing -->
+        <!-- OpenTelemetry Observability & Tracing -->
         <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.zipkin.reporter2</groupId>
-            <artifactId>zipkin-reporter-brave</artifactId>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-otel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-otlp</artifactId>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
