--- a/apps/backend/java-services/business-services/payment-processor/pom.xml
+++ b/apps/backend/java-services/business-services/payment-processor/pom.xml
@@ -5,24 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
-        <relativePath/>
+        <groupId>com.modernreservation</groupId>
+        <artifactId>java-services-parent</artifactId>
+        <version>2.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.modernreservation</groupId>
     <artifactId>payment-processor</artifactId>
-    <version>3.2.0</version>
     <packaging>jar</packaging>
 
     <name>Modern Reservation - Payment Processor</name>
     <description>Payment processing microservice for Modern Reservation System</description>
 
-    <properties>
-        <java.version>21</java.version>
-        <spring-cloud.version>2023.0.0</spring-cloud.version>
-    </properties>
+
 
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -61,14 +56,18 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
-        <!-- Observability & Tracing -->
+        <!-- OpenTelemetry Observability & Tracing -->
         <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.zipkin.reporter2</groupId>
-            <artifactId>zipkin-reporter-brave</artifactId>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-otel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-otlp</artifactId>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
@@ -134,8 +133,8 @@
         <!-- Internal Dependencies -->
         <dependency>
             <groupId>com.modernreservation</groupId>
-            <artifactId>tenant-commons</artifactId>
-            <version>1.0.0</version>
+<artifactId>tenant-commons</artifactId>
+<version>1.0.0</version>
         </dependency>
 
         <!-- Test Dependencies -->
