--- a/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
+++ b/apps/backend/java-services/business-services/payment-processor/src/main/resources/application.yml
@@ -165,8 +165,39 @@ management:
   tracing:
     sampling:
       probability: 1.0
-    zipkin:
-      endpoint: ${ZIPKIN_URL:http://localhost:9411/api/v2/spans}
+
+# OpenTelemetry Configuration
+otel:
+  service:
+    name: ${spring.application.name}
+    version: 3.2.0
+  resource:
+    attributes:
+      service.namespace: modernreservation
+      service.instance.id: ${eureka.instance.instance-id}
+  exporter:
+    otlp:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4317}
+      headers: ${OTEL_EXPORTER_OTLP_HEADERS:}
+  traces:
+    exporter: otlp
+  metrics:
+    exporter: otlp
+  logs:
+    exporter: otlp
+  instrumentation:
+    spring-webmvc:
+      enabled: true
+    jdbc:
+      enabled: true
+    redis:
+      enabled: true
+    kafka:
+      enabled: true
+    jpa:
+      enabled: true
+
+management:
   health:
     redis:
       enabled: true
