--- a/apps/backend/java-services/infrastructure/config-server/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/config-server/src/main/resources/application.yml
@@ -27,6 +27,29 @@ spring:
   #     roles: ADMIN
 
 # Management and Monitoring
+# OpenTelemetry Configuration
+otel:
+  service:
+    name: ${spring.application.name}
+    version: 2.0.0
+  resource:
+    attributes:
+      service.namespace: modernreservation
+      service.instance.id: ${spring.application.name}:${server.port}
+  exporter:
+    otlp:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4317}
+      headers: ${OTEL_EXPORTER_OTLP_HEADERS:}
+  traces:
+    exporter: otlp
+  metrics:
+    exporter: otlp
+  logs:
+    exporter: otlp
+  instrumentation:
+    spring-webmvc:
+      enabled: true
+
 management:
   endpoints:
     web:
