--- a/apps/backend/java-services/infrastructure/tenant-service/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/tenant-service/src/main/resources/application.yml
@@ -83,6 +83,35 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Actuator Configuration
+# OpenTelemetry Configuration
+otel:
+  service:
+    name: ${spring.application.name}
+    version: 2.0.0
+  resource:
+    attributes:
+      service.namespace: modernreservation
+      service.instance.id: ${eureka.instance.instance-id}
+  exporter:
+    otlp:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4317}
+      headers: ${OTEL_EXPORTER_OTLP_HEADERS:}
+  traces:
+    exporter: otlp
+  metrics:
+    exporter: otlp
+  logs:
+    exporter: otlp
+  instrumentation:
+    spring-webmvc:
+      enabled: true
+    jdbc:
+      enabled: true
+    redis:
+      enabled: true
+    jpa:
+      enabled: true
+
 management:
   endpoints:
     web:
