--- a/apps/backend/java-services/pom.xml
+++ b/apps/backend/java-services/pom.xml
@@ -31,6 +31,8 @@
         <!-- Monitoring and observability -->
         <micrometer.version>1.14.4</micrometer.version>
         <zipkin.version>2.24.3</zipkin.version>
+        <opentelemetry.version>1.45.0</opentelemetry.version>
+        <opentelemetry-instrumentation.version>2.10.0</opentelemetry-instrumentation.version>
 
         <!-- Security and validation -->
         <jwt.version>0.12.6</jwt.version>
@@ -69,6 +71,7 @@
     <modules>
         <!-- Shared Libraries -->
         <module>../../../libs/shared/backend-utils</module>
+        <module>../../../libs/shared/tenant-commons</module>
 
         <!-- Infrastructure Services -->
         <module>infrastructure/config-server</module>
@@ -98,6 +101,29 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- OpenTelemetry BOM -->
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>${opentelemetry-instrumentation.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- OpenTelemetry Spring Boot Starter -->
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-spring-boot-starter</artifactId>
+                <version>${opentelemetry-instrumentation.version}</version>
             </dependency>
 
             <!-- API Documentation -->
