--- a/libs/shared/tenant-commons/pom.xml
+++ b/libs/shared/tenant-commons/pom.xml
@@ -6,26 +6,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
-        <relativePath/>
+        <groupId>com.modernreservation</groupId>
+        <artifactId>java-services-parent</artifactId>
+        <version>2.0.0</version>
+        <relativePath>../../../apps/backend/java-services/pom.xml</relativePath>
     </parent>
 
-    <groupId>com.modernreservation</groupId>
     <artifactId>tenant-commons</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Tenant Commons</name>
     <description>Shared library for multi-tenancy support across all microservices</description>
-
-    <properties>
-        <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <dependencies>
         <!-- Lombok for boilerplate reduction -->
