--- a/apps/backend/java-services/infrastructure/tenant-service/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/tenant-service/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     show-sql: false
     properties:
       hibernate:
