feat: Implement Reservation Manager Dashboard and Guest Portal components
- Added ReservationManagerDashboard component for managing reservations and analytics.
- Introduced GuestPortal component for public-facing booking interface.
- Created AuthContext to manage user authentication state and role-based access control.
- Migrated authentication service from Java (Spring Boot) to Node.js (Fastify).
- Developed authentication API endpoints and integrated with shared schemas.
- Updated documentation for authentication service migration and usage.
- Added utility functions for permission management and user role handling.

--- a/apps/backend/java-services/infrastructure/gateway-service/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/gateway-service/src/main/resources/application.yml
@@ -101,6 +101,17 @@ spring:
                 name: tenant-circuit-breaker
                 fallbackUri: forward:/fallback/tenant
 
+        # Authentication Service Routes (Node.js Service)
+        - id: auth-service
+          uri: http://localhost:3100
+          predicates:
+            - Path=/auth/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: auth-circuit-breaker
+                fallbackUri: forward:/fallback/auth
+
         # Batch Processor Routes
         - id: batch-processor
           uri: lb://batch-processor
