--- a/apps/backend/java-services/infrastructure/eureka-server/pom.xml
+++ b/apps/backend/java-services/infrastructure/eureka-server/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.modernreservation</groupId>
         <artifactId>java-services-parent</artifactId>
-        <version>2.0.0</version>
+        <version>1.0.0-alpha</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
